kubernetes/tools/nexus/proxy-service.yml
kind: Service
apiVersion: v1
metadata:
  name: internal-proxy
  namespace: management
spec:
  selector:
    proxy: internal
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
  type: ClusterIP
