kubernetes/tools/nexus/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nexus
  namespace: management
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"

spec:
  tls:
    - hosts:
      - nexus.crosslaketech.com
      secretName: nexus-tls
  rules:
    - host: nexus.crosslaketech.com
      http:
        paths:
        - path: /
          backend:
            serviceName: internal-proxy
            servicePort: 80
